--- a/popup/index.html
+++ b/popup/index.html
@@ -18,26 +18,28 @@
     <title>Clip History</title>
   </head>
   <body marginheight="0" marginwidth="0">
-    <h1 class="margin-top-0">Clip History</h1>
-    <div><span class="bold">Developer:</span> seunggabi</div>
-    <div><span class="bold">Email:</span> <a href="mailto:seunggabi@gmail.com">seunggabi@gmail.com</a></div>
-    <div><span class="bold">Tistory:</span> <a href="http://seunggabi.tistory.com" target="_blank">http://seunggabi.tistory.com</a></div>
-    <div class="bold"><a href="https://github.com/seunggabi" target="_blank">Github</a></div>
-    <div class="bold"><a href="https://www.linkedin.com/in/seunggab-kim-a54027105/" target="_blank">LinkedIn</a></div>
-    <br/>
-    <br/>
-    <div id="review" class="bold blue small">
-      사용해보시고 좋다고 느껴지시면 좋은 리뷰 부탁드려요. :)<br />
-      If you feel good after using it, please give us a good review it. :)<br />
+    <div id="header">
+      <h1 class="margin-top-0">Clip History</h1>
+      <div><span class="bold">Developer:</span> seunggabi</div>
+      <div><span class="bold">Email:</span> <a href="mailto:seunggabi@gmail.com">seunggabi@gmail.com</a></div>
+      <div><span class="bold">Tistory:</span> <a href="http://seunggabi.tistory.com" target="_blank">http://seunggabi.tistory.com</a></div>
+      <div class="bold"><a href="https://github.com/seunggabi" target="_blank">Github</a></div>
+      <div class="bold"><a href="https://www.linkedin.com/in/seunggab-kim-a54027105/" target="_blank">LinkedIn</a></div>
+      <br/>
+      <br/>
+      <div id="review" class="bold blue small">
+        사용해보시고 좋다고 느껴지시면 좋은 리뷰 부탁드려요. :)<br />
+        If you feel good after using it, please give us a good review it. :)<br />
+      </div>
+      <br/>
+      <br/>
+      <div>
+        <div class="bold">[Project]</div>
+        <ul id="project"></ul>
+      </div>
+      <br/>
+      <br/>
     </div>
-    <br/>
-    <br/>
-    <div>
-      <div class="bold">[Project]</div>
-      <ul id="project"></ul>
-    </div>
-    <br/>
-    <br/>
 
     <!-- body -->
     <div id="body">
